Fixed menu item and checkboxes not showing because of new whatsapp web changes

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 
 .menu-item-incognito
 {
-    margin-right: 16px !important;
     cursor: pointer !important;
 }
 
